--- a/package.json
+++ b/package.json
@@ -27,28 +27,27 @@
     "exceljs": "^1.13.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.2.2",
-    "async": "^2.6.1",
+    "@babel/core": "^7.5.5",
+    "async": "^2.6.3",
     "browser-sync": "^2.26.7",
     "gulp": "^4.0.0",
     "gulp-autoprefixer": "^6.0.0",
     "gulp-babel": "^8.0.0",
+    "gulp-changed": "^3.2.0",
+    "gulp-cli": "^2.0.1",
     "gulp-fn": "0.0.3",
+    "gulp-notify": "^3.2.0",
     "gulp-postcss": "^8.0.0",
     "gulp-run-command": "0.0.9",
     "gulp-sass": "^4.0.2",
+    "gulp-shell": "^0.7.1",
+    "gulp-streamify": "^1.0.2",
     "gulp-watch": "^5.0.1",
-    "known-css-properties": "^0.5.0",
+    "known-css-properties": "^0.15.0",
     "minimatch": "^3.0.2",
-    "moment": "^2.23.0",
     "request": "^2.88.0",
     "rucksack-css": "^1.0.2",
-    "sass": "^1.15.2",
-    "gulp-changed": "^3.2.0",
-    "gulp-cli": "^2.0.1",
-    "gulp-notify": "^3.2.0",
-    "gulp-shell": "^0.6.5",
-    "gulp-streamify": "^1.0.2"
+    "sass": "^1.22.9"
   },
   "browserslist": [
     "last 1 version",
