Major refactor to auto-correct functionality

--- a/package.json
+++ b/package.json
@@ -28,8 +28,11 @@
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
+    "@typescript-eslint/eslint-plugin": "^2.1.0",
+    "@typescript-eslint/parser": "^2.1.0",
     "async": "^2.6.3",
     "browser-sync": "^2.26.7",
+    "eslint": "^6.3.0",
     "gulp": "^4.0.0",
     "gulp-autoprefixer": "^6.0.0",
     "gulp-babel": "^8.0.0",
