--- a/package.json
+++ b/package.json
@@ -24,33 +24,34 @@
   },
   "homepage": "https://github.com/NerdyDeedsLLC/flambe#readme",
   "dependencies": {
-    "exceljs": "^1.13.0"
+    "exceljs": "^4.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.5.5",
-    "@typescript-eslint/eslint-plugin": "^2.1.0",
-    "@typescript-eslint/parser": "^2.1.0",
-    "async": "^2.6.3",
-    "browser-sync": "^2.26.13",
-    "eslint": "^6.3.0",
-    "gulp": "^4.0.0",
-    "gulp-autoprefixer": "^6.0.0",
+    "@babel/core": "^7.13.8",
+    "@typescript-eslint/eslint-plugin": "^4.16.1",
+    "@typescript-eslint/parser": "^4.16.1",
+    "async": "^3.2.0",
+    "browser-sync": "^2.26.14",
+    "eslint": "^7.21.0",
+    "gulp": "^4.0.2",
+    "gulp-autoprefixer": "^7.0.1",
     "gulp-babel": "^8.0.0",
-    "gulp-changed": "^3.2.0",
-    "gulp-cli": "^2.0.1",
+    "gulp-changed": "^4.0.2",
+    "gulp-cli": "^2.3.0",
     "gulp-fn": "0.0.3",
     "gulp-notify": "^3.2.0",
-    "gulp-postcss": "^8.0.0",
-    "gulp-run-command": "0.0.9",
+    "gulp-postcss": "^9.0.0",
+    "gulp-run-command": "0.0.10",
     "gulp-sass": "^4.1.0",
-    "gulp-shell": "^0.7.1",
+    "gulp-shell": "^0.8.0",
     "gulp-streamify": "^1.0.2",
     "gulp-watch": "^5.0.1",
-    "known-css-properties": "^0.15.0",
+    "known-css-properties": "^0.21.0",
     "minimatch": "^3.0.2",
-    "request": "^2.88.0",
+    "postcss": "^8.2.7",
+    "request": "^2.88.2",
     "rucksack-css": "^1.0.2",
-    "sass": "^1.22.9"
+    "sass": "^1.32.8"
   },
   "browserslist": [
     "last 1 version",
