--- a/package.json
+++ b/package.json
@@ -25,10 +25,15 @@
   "homepage": "https://github.com/NerdyDeedsLLC/flambe#readme",
   "dependencies": {
     "exceljs": "^1.13.0",
-    "localforage": "^1.9.0"
+    "localforage": "^1.9.0",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-node-resolve": "^5.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
+    "@rollup/plugin-babel": "^5.3.0",
+    "@rollup/plugin-commonjs": "^17.1.0",
+    "@rollup/plugin-node-resolve": "^11.2.0",
     "@typescript-eslint/eslint-plugin": "^2.1.0",
     "@typescript-eslint/parser": "^2.1.0",
     "async": "^2.6.3",
@@ -37,21 +42,26 @@
     "gulp": "^4.0.0",
     "gulp-autoprefixer": "^6.0.0",
     "gulp-babel": "^8.0.0",
+    "gulp-better-rollup": "^4.0.1",
     "gulp-changed": "^3.2.0",
     "gulp-cli": "^2.0.1",
     "gulp-fn": "0.0.3",
     "gulp-notify": "^3.2.0",
     "gulp-postcss": "^8.0.0",
+    "gulp-rollup-lightweight": "^1.0.11",
     "gulp-run-command": "0.0.9",
     "gulp-sass": "^4.1.0",
     "gulp-shell": "^0.7.1",
+    "gulp-sourcemaps": "^3.0.0",
     "gulp-streamify": "^1.0.2",
     "gulp-watch": "^5.0.1",
     "known-css-properties": "^0.15.0",
     "minimatch": "^3.0.2",
     "request": "^2.88.0",
+    "rollup": "^2.39.1",
     "rucksack-css": "^1.0.2",
-    "sass": "^1.22.9"
+    "sass": "^1.22.9",
+    "vinyl-source-stream": "^2.0.0"
   },
   "browserslist": [
     "last 1 version",
