--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   },
   "homepage": "https://github.com/NerdyDeedsLLC/flambe#readme",
   "dependencies": {
-    "exceljs": "^1.13.0",
+    "exceljs": "^4.2.1",
     "localforage": "^1.9.0",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-node-resolve": "^5.2.0"
@@ -58,7 +58,8 @@
     "known-css-properties": "^0.15.0",
     "minimatch": "^3.0.2",
     "request": "^2.88.0",
-    "rollup": "^2.39.1",
+    "rollup": "^2.44.0",
+    "rollup-plugin-babel": "^4.4.0",
     "rucksack-css": "^1.0.2",
     "sass": "^1.22.9",
     "vinyl-source-stream": "^2.0.0"
