--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "exceljs": "^4.2.1",
     "localforage": "^1.9.0",
     "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-node-resolve": "^5.2.0"
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "tabulator-tables": "^4.9.3"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
