--- a/.gitignore
+++ b/.gitignore
@@ -69,3 +69,15 @@ public/lib/css/*
 public/lib/js/*
 public/lib/js/
 .vscode/
+./.data/setup.sh
+./.data/setup.sh
+./.data/setup.sh
+./.data/setup.sh
+./.data/setup.sh
+./.data/setup.sh
+./.data/setup.sh
+./.data/setup.sh
+./.data/setup.sh
+./.data/setup.sh
+./.data/setup.sh
+./.data/setup.sh
