--- a/package.json
+++ b/package.json
@@ -40,8 +40,9 @@
     "cors-anywhere": "^0.4.4",
     "date-fns": "^2.22.1",
     "exceljs": "^4.2.1",
-    "json-2-csv": "^3.14.1",
+    "jszip": "^3.6.0",
     "localforage": "^1.9.0",
+    "pako": "^1.0.11",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-node-resolve": "^5.2.0",
     "tabulator-tables": "^4.9.3"
